# gcal-megaphone

./: README.md  pyproject.toml
tests/: test_gcal_megaphone.py
