[tool.poetry]
name = "gcal-megaphone"
version = "0.1.0"
description = ""
authors = ["Surya Manikhandan <smanikha@purdue.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.61.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.3"
sure = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
